--- a/finalProject/css/roster.css
+++ b/finalProject/css/roster.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Montserrat', sans-serif;
-    background-image: url("img/annie-spratt-0ZPSX_mQ3xI-unsplash-m.jpg");
+    background-image: url("../img/annie-spratt-0ZPSX_mQ3xI-unsplash-m.jpg");
 }
 nav > a{
     font-weight: 600;
