--- a/finalProject/css/overview.css
+++ b/finalProject/css/overview.css
@@ -111,10 +111,11 @@ nav > a{
     text-align: left;
 }
 
-@media screen and (min-width: 771px){ /*tablet*/
+@media screen and (max-width: 992px){ /*tablet*/
 
 }
-@media screen and (max-width: 770px){ /*tablet*/
+@media screen and (max-width: 991px){ /*tablet*/
+
     .profile-img{
         margin-left: -20px;
     }
@@ -140,7 +141,8 @@ nav > a{
 
 
 }
-@media screen and (max-width: 360px){
+@media screen and (max-width: 530px){
+
     body{
         font-size: 13px;
     }
@@ -152,7 +154,7 @@ nav > a{
         padding: 0px;
     }
     #searchbar{
-        width: 130%;
+        width: 100%;
         font-size: 11px;
         margin: 5px 5px 0px 0px;
     }
@@ -184,8 +186,8 @@ nav > a{
         height: 85%;
     }
     #capacity{
-        width: 50px;
-        height: 10px;
+        width: 40px;
+        height: 15px;
     }
     #sem-cap{
         gap: 5px;
@@ -195,4 +197,12 @@ nav > a{
         height: 30px;
         margin-left: 5px;
     }
+    .form-time{
+        margin: 0px 2px 0px 2px;
+        width: 25%;
+    }
+    .btn{
+        padding: 1px 1px 1px 1px;
+    }
+
 }
