--- a/finalProject/css/roster.css
+++ b/finalProject/css/roster.css
@@ -21,3 +21,48 @@ section{
 .card{
     background-color: skyblue;
 }
+.stu-info{
+    text-align: left;
+}
+@media screen and (max-width: 991px){ /*tablet*/
+    table{
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 530px){
+    #logo{
+        width: 40px;
+        height: 30px;
+    }
+    .nav-link{
+        padding: 0px;
+    }
+    #searchbar{
+        width: 100%;
+        font-size: 10px;
+        margin: 0px 5px 0px 0px;
+    }
+    nav{
+        font-size: 10px;
+    }
+    table{
+        font-size: 9px;
+    }
+    .modal-body{
+        font-size: 11px;
+    }
+    .btn{
+        padding: 1px 1px 1px 1px;
+        font-size: 9px;
+    }
+    .btn-info{
+        margin: 0px 0px 4px 0px;
+        font-size: 8px;
+    }
+    .card-body h4{
+        font-size: 15px;
+    }
+    .card-body{
+        font-size: 12px;
+    }
+}
