--- a/finalProject/css/schedule.css
+++ b/finalProject/css/schedule.css
@@ -11,3 +11,28 @@ nav > a{
 table{
     margin-top: 5px;
 }
+@media screen and (max-width: 991px){ /*tablet*/
+    table{
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 530px){
+    #logo{
+        width: 40px;
+        height: 30px;
+    }
+    .nav-link{
+        padding: 0px;
+    }
+    #searchbar{
+        width: 100%;
+        font-size: 10px;
+        margin: 0px 5px 0px 0px;
+    }
+    nav{
+        font-size: 10px;
+    }
+    table{
+        font-size: 6px;
+    }
+}
