--- a/finalProject/css/index.css
+++ b/finalProject/css/index.css
@@ -1,40 +1,49 @@
-body{
-    background-image: url("../img/jj-ying-7JX0-bfiuxQ-unsplash-l.jpg");
-    font-family: 'Montserrat', sans-serif;
-    height: 100vh;
+body {
+  background-image: url("../img/jj-ying-7JX0-bfiuxQ-unsplash-l.jpg");
+  font-family: 'Montserrat', sans-serif;
 }
-form{
-    font:12pt Arial;
-    margin:30px;
-    padding: 10px;
-    border-radius: 4px;
-    background-color: white;
+
+form {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  margin: 30px;
+  padding: 10px;
+  background-color: white;
 }
-h1{
+
+h1 {
+  margin-top: 20px;
+}
+
+img {
+  margin-top: 100px;
+}
+
+.form-check {
+  padding: 5px 25px;
+}
+
+.form-floating {
+  padding-bottom: 5px;
+}
+
+@media screen and (max-width: 991px) { /* tablet */
+
+  body {
+    background-image: url("../img/jj-ying-7JX0-bfiuxQ-unsplash-m.jpg");
+  }
+
+  form {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  body {
+    background-image: url("../img/jj-ying-7JX0-bfiuxQ-unsplash-sm.jpg");
+  }
+
+  img {
     margin-top: 20px;
-}
-img{
-    margin-top: 100px;
-}
-.form-check{
-    padding: 10px 0px 0px 20px;
-}
-.form-floating{
-    padding-bottom: 5px;
-}
-@media screen and (max-width: 991px){ /*tablet*/
-    body{
-        background-image: url("../img/jj-ying-7JX0-bfiuxQ-unsplash-m.jpg");
-    }
-    form{
-        width: 60%;
-    }
-}
-@media screen and (max-width: 530px){
-    body{
-        background-image: url("../img/jj-ying-7JX0-bfiuxQ-unsplash-sm.jpg");
-    }
-    img{
-        margin-top: 20px;
-    }
+  }
 }
