--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,9 @@ body {
   font-size: 15px;
   line-height: 1.5;
 }
+main {
+  background-color: #383957;
+}
 section {
   margin: 8px 8px;
 
@@ -15,6 +18,7 @@ img {
   width: 523.5px;
   height: 240px;
 }
+
 a {
   color: #ffe66d;
 }
